Add repository field

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "prisma-cursorstream",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Prisma Stream Client Extension (Cursor-based Implementation)",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "repository": "https://github.com/etabits/prisma-cursorstream",
   "scripts": {
     "prepublishOnly": "tsc"
   },
