chroe(package.json): support @prisma/client@^6.2.x

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@prisma/client": "^5.1.1"
+    "@prisma/client": "^5.1.1 || >= 5.1.1 <= 6.2.x"
   }
 }
